# multi

./: .coderabbit.yaml  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .semgrepignore  CLAUDE.md  LICENSE  README.md  TODO.md  biome.json  opencode.json  ruff.toml
.claude/: settings.json
.claude/agents/: analyst.md  ar.md  autolearn.md  cdo.md  cfo.md  cmo.md  cost-tracker.md  cso.md  cto.md  design-doc-writer.md  fact-checker.md  healthcheck.md  interviewee.md  journalist.md  librarian.md  pai.md  (+13 more)
.ruler/: blog-dev.md  branching.md  design-system.md  ruler.toml  security.md
apps/kytrade/: .gitignore  DATA.md  PROMPTS.md  README.md  docker-compose.yml  helmfile.yaml  openapi.json  pyproject.toml
apps/kytrade/api/: alembic.ini  pyproject.toml
apps/kytrade/api/helm/: README.md  values.yaml
apps/kytrade/api/helm/templates/: _helpers.tpl  deployment.yaml  secret.yaml
apps/kytrade/api/kytrade/cli/: typermain.py
apps/kytrade/api/kytrade/lib/: etl.py  yahoo.py
apps/kytrade/api/kytrade/lib/db/: stocks.py
apps/kytrade/api/tests/integration/api/: test_app.py
apps/kytrade/front-end/: README.md  package-lock.json  package.json
apps/kytrade/front-end/image-files/etc/nginx/sites-available/: default.j2
apps/kytrade/front-end/src/pages/: Experiments.tsx  Screener.tsx
apps/kytrade/raw-data/indexes/: README.md  spy-oct17-2022.xlsx
apps/kytrade/src/kytrade/: __init__.py  analysis.py  config.py  db.py  etl.py  indexes.py  models.py  ops.py  sp500.py  stocks.py  yahoo.py
apps/kytrade/src/kytrade/api/: app.py
apps/kytrade/src/kytrade/cli/: analyze.py  data.py  db.py  etl.py  main.py  stock.py
apps/kytrade/src/kytrade/providers/: __init__.py  base.py  yahoo.py
apps/kytrade/tests/integration/: conftest.py  test_api_int.py  test_functions_int.py  test_store_int.py
apps/kytrade/tests/unit/: conftest.py  test_analysis.py  test_api.py  test_cli.py  test_cli_analyze.py  test_config.py  test_etl.py  test_indexes.py  test_ops.py  test_sp500.py  test_stocks.py  test_yahoo.py
apps/mcp-servers/google-search-console/: pyproject.toml  server.py
blog/: README.md
exports/: README.md  export-kytrade.sh.SAMPLE
games/: README.md
infra/: README.md
kytrade/: Dockerfile  QUICKSTART.md  README.md  WHERE_I_LEFT_OFF.md  docker-compose.yml
kytrade/api/: Dockerfile  pyproject.toml
kytrade/api/alembic/: README.md
kytrade/api/alembic/versions/: 11b2f4d1f46b_baseline.py
kytrade/api/helm/: Chart.yaml  README.md  helmfile.yaml
kytrade/api/helm/kytrade-api/: Chart.yaml  README.md
kytrade/api/helm/kytrade-client/: Chart.yaml  values.yaml
kytrade/api/helm/kytrade-lib/: Chart.yaml
kytrade/api/helm/kytrade-lib/templates/: _helpers.tpl  _hpa.yaml  _serviceaccount.yaml
kytrade/api/helm/templates/: NOTES.txt  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
kytrade/api/helm/templates/tests/: test-connection.yaml
kytrade/api/kytrade/: const.py  exceptions.py
kytrade/api/kytrade/api/: app.py
kytrade/api/kytrade/cli/: db.py  main.py
kytrade/api/kytrade/lib/db/: common.py
kytrade/api/tests/unit/: test_kytrade.py
samples/: README.md
secrets/: .gitignore  README.md  export-agent-controller.sh.SAMPLE  export-kytrade.sh.SAMPLE
(+1171 files in other folders)
