[project]
name = "kytrade"
version = "3.0.0"
description = "Personal trading toolkit: run experiments, explore transaction decisions, test strategies"
authors = [{ name = "Kyle Pericak", email = "kyle@pericak.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "typer>=0.26.8",
    "yfinance>=1.5.1",
]

[project.scripts]
kt = "kytrade.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kytrade"]

[tool.pytest.ini_options]
testpaths = ["tests"]
