[project]
name = "kytrade"
version = "4.0.0"
description = "Personal trading toolkit: run experiments, explore transaction decisions, test strategies"
authors = [{ name = "Kyle Pericak", email = "kyle@pericak.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "html5lib>=1.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "typer>=0.26.8",
    "uvicorn[standard]>=0.50.0",
    "yfinance>=1.5.1",
]

[project.scripts]
kt = "kytrade.cli.main:app"

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kytrade"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: needs the docker-compose postgres (run via bin/integration-test.sh)",
]
