[tool.poetry]
name = "kytrade"
version = "0.1.0"
description = ""
authors = ["kylep3 <kyle@pericak.com>"]

[tool.poetry.scripts]
kt = "kytrade.cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
click = "^8.1.3"
yfinance = "^0.1.74"
gunicorn = "^20.1.0"
slackclient = "^2.9.4"
slackeventsapi = "^3.0.1"
praw = "^7.6.0"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.4"
openpyxl = "^3.0.10"
tabulate = "^0.9.0"
marshmallow = "^3.19.0"
flask-smorest = "^0.40.0"
typer = {extras = ["all"], version = "^0.7.0"}
pre-commit = "^2.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
